--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,16 @@ button:hover {
     transition: 0.5s;
 }
 
+span {
+    font-family: -apple-system, sans-serif;;
+    font-size: 0.95rem;
+}
+
+strong {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
 h3 {
     font-size: 1.2rem;
     font-family: -apple-system, sans-serif;
