--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ h3 {
     margin-bottom: 0.5rem;
 } 
 
-.resultado {
+.result {
     display: flex;
     flex-direction: column;
     background-color: rgba(128, 128, 128, 0.103);
