--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,9 @@ body {
     padding: 20px 3rem;
     margin-top: 4rem;
     margin-bottom: 4rem;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
+    width: 25rem;
 }
 
 h1 {
@@ -102,5 +102,5 @@ h3 {
     padding: 1rem;
     gap: 0.2rem;
     border: 1px solid #ccc;
-    border-radius: 8px;
+    border-radius: 0.5rem;
 }
